fix: change border color to assure contrast and add focus outline to button component

--- a/src/Components/UI/Button/Button.css
+++ b/src/Components/UI/Button/Button.css
@@ -7,6 +7,11 @@
   cursor: pointer;
   font-family: Archivo;
 }
+
+.a11y-button:focus{
+outline: 5px solid yellow;  
+}
+
 .a11y-button-large {
   width: 246px;
 }
