--- a/src/Components/UI/Form/Form.css
+++ b/src/Components/UI/Form/Form.css
@@ -6,7 +6,7 @@
   margin-top: 0.5em;
   background-color: #000;
   border: none;
-  border-bottom: #595959 thin solid;
+  border-bottom: #5A5959 thin solid;
   color: #7c7c7c;
   font: inherit;
   width: 302px;
@@ -43,7 +43,7 @@
     height: 2em;
     background-color: #000 !important;
     border: none;
-    border-bottom: #595959 thin solid;
+    border-bottom: #5A5959 thin solid;
     color: #7c7c7c !important;
     font: inherit;
     width: 196px;
